mozilla scrollbar fixed

--- a/src/components/AlbumsCarrucel/styles/carrucel.module.css
+++ b/src/components/AlbumsCarrucel/styles/carrucel.module.css
@@ -1,5 +1,4 @@
 .carrucel{
-    overflow: auto;
 }
 
 .carrucel::-webkit-scrollbar{
